apps/microservices-app/src/components/frontend-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "frontend-ingress"
    networking.gke.io/managed-certificates: cymbal-frontend-cert
    # kubernetes.io/ingress.global-static-ip-name: ADDRESS_NAME
spec:
  rules:
  - host: cymbal.jrb.solutions
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
